--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <meta name="title" content="Life Zone Pharma">
+    <meta name="description" content="Life Zone Pharma solutions through its high quality medicines and life saving drugs. We provide a wide range of Pharma products like tablets, capsules, syrups, ointments etc. Each of our products is manufactured under our certified formulation plants where we use high-quality raw Pharma products used in formulating
+    quality medicines.">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
