Keywords and other meta tags

--- a/about-us.html
+++ b/about-us.html
@@ -16,6 +16,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <meta name="title" content="Life Zone Pharma | About">
+    <meta name="description" content="Life Zone Pharma solutions through its high quality medicines and life saving drugs. We provide a wide range of Pharma products like tablets, capsules, syrups, ointments etc. Each of our products is manufactured under our certified formulation plants where we use high-quality raw Pharma products used in formulating
+    quality medicines.">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -69,6 +73,47 @@
 
 
     
+
+
+
+
+
+
+
+<!-- Why us?
+We at Vibcare Pharma believe in providing Best Pharma Franchise & PCD Pharma to our customers. We are the best PCD Pharma company in the industry. We have achieved this by focusing on 5 main areas which directly affect our customer’s experience.
+
+Honesty and Integrity
+Best Quality
+Best Customer Support
+Best Promotional input
+Same Day Dispach of all Orders.
+
+VISION
+To become the leading pharmaceutical player in the industry by assuring high quality standards and cost effective products at all times. We want to mark our presence in the society by creating a portfolio of low cost medicines available to all.
+
+	
+MISSION
+To uphold our social responsibilities of delivering highest standard healthcare services to all segments of society without compromising on our core values of integrity, good ethics and commitment. 
+
+
+
+
+We are a growing pharmaceutical company, committed to increase access to high-quality healthcare by developing, producing and marketing affordable generic drugs in Domestic as well as International Markets. We also offer pharma franchise, pcd pharma opportunities in India.-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
