--- a/index.html
+++ b/index.html
@@ -5,33 +5,44 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180074374-1"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    gtag('config', 'UA-180074374-1');
+        gtag('config', 'UA-180074374-1');
     </script>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="title" content="Life Zone Pharma">
-    <meta name="description" content="Life Zone Pharma solutions through its high quality medicines and life saving drugs. We provide a wide range of Pharma products like tablets, capsules, syrups, ointments etc. Each of our products is manufactured under our certified formulation plants where we use high-quality raw Pharma products used in formulating
-    quality medicines.">
+
+
+
+    <!-- Schema.org markup for Google+ -->
+    <meta itemprop="name" content="Life Zone Pharma">
+    <meta itemprop="description" content="We provide a wide range of Pharma products like tablets, capsules, syrups, ointments etc. Each of our products is manufactured under our certified formulation plants where we use high-quality raw Pharma products used in formulating quality medicines.">
+    <!-- <meta itemprop="image" content="https://fontawesome.com/images/open-graph.png"> -->
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <title>Home | Life Zone Pharma</title>
+    <meta name="title" content="Life Zone Pharma | Home">
+    <meta name="description" content="Life Zone Pharma solutions through its high quality medicines and life saving drugs. We provide a wide range of Pharma products like tablets, capsules, syrups, ointments etc. Each of our products is manufactured under our certified formulation plants where we use high-quality raw Pharma products used in formulating quality medicines.">
+    <meta name="keywords" content="pharma, pharma Meerut, pharmaceutical, PCD pharma, Pharma wholesale, Medicine, medicare, life zone pharma">
+
+
+
 </head>
 
 <body>
 
 
 
-    <div class="container text-center text-light bg-primary"  style="max-width: 100%;">
+    <div class="container text-center text-light bg-primary" style="max-width: 100%;">
         <div class="row">
             <div class="col-md-6 col-sm-6 col-xs-12 mt-1">
                 <small>+91-9837277686 | lifezonepharma@gmail.com</small>
@@ -210,7 +221,7 @@
         </div>
 
 
-<hr class="mt-5" style="max-width: 30%;">
+        <hr class="mt-5" style="max-width: 30%;">
 
 
         <h1 class="text-center mt-5">Our Services</h1>
