Title head logo added

--- a/products.html
+++ b/products.html
@@ -25,6 +25,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <title>Products List | Life Zone Pharma</title>
+    <link rel="icon" href="images/title.png" type="image/icon type">
 </head>
 
 <body>
