--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <title>Home | Life Zone Pharma</title>
+    <link rel="icon" href="images/title.png" type="image/icon type">
     <meta name="title" content="Life Zone Pharma | Home">
     <meta name="description" content="Life Zone Pharma solutions through its high quality medicines and life saving drugs. We provide a wide range of Pharma products like tablets, capsules, syrups, ointments etc. Each of our products is manufactured under our certified formulation plants where we use high-quality raw Pharma products used in formulating quality medicines.">
     <meta name="keywords" content="pharma, pharma Meerut, pharmaceutical, PCD pharma, Pharma wholesale, Medicine, medicare, life zone pharma">
