--- a/index.html
+++ b/index.html
@@ -156,34 +156,14 @@
             <div class="row">
                 <div class="col-md-8 col-sm-8 col-xs-12 mt-5">
                     <h1>Welcome to LIFE ZONE PHARMA</h1>
-                    <h3>LEADING PCD AND THIRD PARTY COMPANY IN INDIA</h3>
-                    <p><strong>LIFE ZONE PHARMA</strong> is a Leading PCD Pharma Company in India, well known for
-                        providing best
-                        Pharma solutions through its high quality medicines and life saving drugs. Our company has also
-                        captured
-                        the top position among the leading PCD Pharma companies in Chandigarh. We provide a wide range
-                        of Pharma
-                        products like tablets, capsules, syrups, ointments etc. Each of our products is manufactured
-                        under our
-                        certified formulation plants where we use high-quality raw Pharma products used in formulating
-                        quality
-                        medicines. All of our Pharma products are WHO-GMP certified and we are an ISO 9001:2015 company
-                        follows
-                        are the regulations of national and International standards.</p>
-                    <p>We have developed a special section for skilled Pharma professionals who are keen to make their
-                        bright
-                        career as a businessman in Pharma industry, as we offer them best Pharma franchise opportunities
-                        to let
-                        them grow by setting up a Pharma franchise business in their own locality on a monopoly basis.
-                        We provide
-                        all kinds of supports gradually so that they could not find any issue while running this Pharma
-                        franchise
-                        business.</p>
+                    <p><strong>LIFE ZONE PHARMA</strong> is a growing Pharma Company in India, well known for
+                        providing best Pharma solutions through its high quality medicines and life saving drugs. We provide a wide range of Pharma products like tablets, capsules, syrups, ointments etc. Each of our products is manufactured under certified formulation plants where high-quality raw Pharma products are used in formulating quality medicines. All of our Pharma products are WHO-GMP certified and we are an ISO 9001:2015 company follows all the regulations of national and International standards.</p>
+
+                    <!-- <p>We have developed a special section for skilled Pharma professionals who are keen to make their
+                        bright career as a businessman in Pharma industry, as we offer them best Pharma franchise opportunities to let them grow by setting up a Pharma franchise business in their own locality on a monopoly basis. We provide all kinds of supports gradually so that they could not find any issue while running this Pharma franchise business.</p> -->
+
                     <p>Our motto is to deliver high-quality medicines so that we could do something best for the
-                        humanity and
-                        for great success. This is the reason each of our clients is satisfied through our quality
-                        Pharma
-                        products, as we never compromised with quality and quantity. </p>
+                        humanity and for great success. This is the reason each of our clients is satisfied through our quality Pharma products, as we never compromised with quality and quantity. </p>
                     <a href="about-us.html">
                         <button" class="btn btn-outline-info">More Info ></button>
                     </a>
