Nav Bar style changed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Life Zone Pharma">
     <meta itemprop="description" content="We provide a wide range of Pharma products like tablets, capsules, syrups, ointments etc. Each of our products is manufactured under our certified formulation plants where we use high-quality raw Pharma products used in formulating quality medicines.">
-    <!-- <meta itemprop="image" content="https://fontawesome.com/images/open-graph.png"> -->
+    <meta itemprop="image" content="https://https://lifezonepharma.github.io/LifeZonePharma/images/title.png">
 
 
     <!-- Bootstrap CSS -->
@@ -45,11 +45,11 @@
 
     <div class="container text-center text-light bg-primary" style="max-width: 100%;">
         <div class="row">
-            <div class="col-md-6 col-sm-6 col-xs-12 mt-1">
+            <div class="col-md-6 col-sm-4 col-xs-12 mt-1">
                 <small>+91-9837277686 | lifezonepharma@gmail.com</small>
             </div>
 
-            <div class="col-md-6 col-sm-6 col-xs-12 mt-1">
+            <div class="col-md-6 col-sm-8 col-xs-12 mt-1">
                 <small>H.O.- Tonk Road, Jaipur &nbsp &nbsp | &nbsp &nbsp
                     R.O.- 216/1 Indra Nagar, Brahampuri, Meerut-250002</small>
             </div>
@@ -89,7 +89,7 @@
 
     <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
         <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png"><strong>Life Zone Pharma</strong>
+            <img src="images/logo.png" width="60%" height="60%" class="d-inline-block img-fluid align-top" alt="" loading="lazy">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
