--- a/contact-us.html
+++ b/contact-us.html
@@ -50,7 +50,7 @@
 
     <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
         <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png">Life Zone Pharma
+            <img src="images/logo.png" width="60%" height="60%" class="d-inline-block img-fluid align-top" alt="" loading="lazy">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
