Updated Mistakes in the para

--- a/about-us.html
+++ b/about-us.html
@@ -102,7 +102,7 @@
                         MISSION
                         To uphold our social responsibilities of delivering highest standard healthcare services to all segments of society without compromising on our core values of integrity, good ethics and commitment. </p>
 
-                    <p>Since its provenance in 01 June 2016, the company has delivered matchless and unequaled product value to the customers with a high quality product backed by unparalleled service, technical support and formulation customization capabilities. The Drugs LIFECOM PHARMACEUTICALS (I) PRIVATE LIMITED are manufactured under WHO GMP certification units. We have taken scientific steps in providing quality medicines like tablets, capsules, creams, gel, lotion, medicated soap and liquid orals. Our products are unique and diverse. The company efforts and endeavors to become leader in every field of Pharmaceuticals segment.</p>
+                    <p>Since its provenance in 01 June 2016, the company has delivered matchless and unequaled product value to the customers with a high quality product backed by unparalleled service, technical support and formulation customization capabilities. The Drugs LIFE ZONE PHARMA are manufactured under WHO GMP certification units. We have taken scientific steps in providing quality medicines like tablets, capsules, creams, gel, lotion, medicated soap and liquid orals. Our products are unique and diverse. The company efforts and endeavors to become leader in every field of Pharmaceuticals segment.</p>
                     
                 </div>
 
