Product Packaging added

--- a/products.html
+++ b/products.html
@@ -126,7 +126,7 @@
 
                             <tr>
                                 <td style=min-width:50px>1</td>
-                                <td style=min-width:50px>AYUFLOX 200</td>
+                                <td style=min-width:50px>AYUFLOX 200 TAB</td>
                                 <td style=min-width:50px>Ofloxacin 200 mg</td>
                                 <td style=min-width:50px>10*10 BLISTER</td>
                             </tr>
@@ -537,16 +537,16 @@
 
         <div class="our_products ">
             <marquee class="p-q">
-                <img src="images/home-products/01.jpg" alt="image" />
-                <img src="images/home-products/02.jpg" alt="image" />
-                <img src="images/home-products/03.jpg" alt="image" />
-                <img src="images/home-products/04.jpg" alt="image" />
-                <img src="images/home-products/05.jpg" alt="image" />
-                <img src="images/home-products/06.jpg" alt="image" />
-                <img src="images/home-products/07.jpg" alt="image" />
-                <img src="images/home-products/08.jpg" alt="image" />
-                <img src="images/home-products/09.jpg" alt="image" />
-                <img src="images/home-products/10.jpg" alt="image" />
+                <img src="images/home-products/01.jpg" alt="image" style="width:10%" />
+                <img src="images/home-products/02.jpg" alt="image" style="width:10%"/>
+                <img src="images/home-products/03.jpg" alt="image" style="width:10%"/>
+                <img src="images/home-products/04.jpg" alt="image" style="width:10%"/>
+                <img src="images/home-products/05.jpg" alt="image" style="width:10%"/>
+                <img src="images/home-products/06.jpg" alt="image" style="width:10%"/>
+                <img src="images/home-products/07.jpg" alt="image" style="width:10%"/>
+                <img src="images/home-products/08.jpg" alt="image" style="width:10%"/>
+                <img src="images/home-products/09.jpg" alt="image" style="width:10%"/>
+                <img src="images/home-products/10.jpg" alt="image" style="width:10%"/>
             </marquee>
         </div>
     </div>
