--- a/contact-us.html
+++ b/contact-us.html
@@ -176,16 +176,16 @@
 
     <div class="our_products ">
         <marquee class="p-q">
-            <img src="images/home-products/01.jpg" alt="image" />
-            <img src="images/home-products/02.jpg" alt="image" />
-            <img src="images/home-products/03.jpg" alt="image" />
-            <img src="images/home-products/04.jpg" alt="image" />
-            <img src="images/home-products/05.jpg" alt="image" />
-            <img src="images/home-products/06.jpg" alt="image" />
-            <img src="images/home-products/07.jpg" alt="image" />
-            <img src="images/home-products/08.jpg" alt="image" />
-            <img src="images/home-products/09.jpg" alt="image" />
-            <img src="images/home-products/10.jpg" alt="image" />
+            <img src="images/home-products/01.jpg" alt="image" style="width:10%" />
+            <img src="images/home-products/02.jpg" alt="image" style="width:10%"/>
+            <img src="images/home-products/03.jpg" alt="image" style="width:10%"/>
+            <img src="images/home-products/04.jpg" alt="image" style="width:10%"/>
+            <img src="images/home-products/05.jpg" alt="image" style="width:10%"/>
+            <img src="images/home-products/06.jpg" alt="image" style="width:10%"/>
+            <img src="images/home-products/07.jpg" alt="image" style="width:10%"/>
+            <img src="images/home-products/08.jpg" alt="image" style="width:10%"/>
+            <img src="images/home-products/09.jpg" alt="image" style="width:10%"/>
+            <img src="images/home-products/10.jpg" alt="image" style="width:10%"/>
         </marquee>
     </div>
     </div>
